// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a movie card 1`] = `
<div
  className="cardWrapper"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <div
    className="starWrapper"
  >
    <span
      className="star"
      onClick={[Function]}
      style={
        Object {
          "color": "black",
        }
      }
    >
      ★
    </span>
  </div>
  <a
    href="https://www.themoviedb.org/movie/283566"
  >
    <div
      className="card"
    >
      <div
        className="imageWrapper"
      >
        <span
          style={
            Object {
              "background": "none",
              "border": 0,
              "boxSizing": "border-box",
              "display": "inline-block",
              "height": "initial",
              "margin": 0,
              "maxWidth": "100%",
              "opacity": 1,
              "overflow": "hidden",
              "padding": 0,
              "position": "relative",
              "width": "initial",
            }
          }
        >
          <span
            style={
              Object {
                "background": "none",
                "border": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": "initial",
                "margin": 0,
                "maxWidth": "100%",
                "opacity": 1,
                "padding": 0,
                "width": "initial",
              }
            }
          >
            <img
              alt=""
              aria-hidden={true}
              src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27300%27%20height=%27169%27/%3e"
              style={
                Object {
                  "background": "none",
                  "border": 0,
                  "display": "block",
                  "height": "initial",
                  "margin": 0,
                  "maxWidth": "100%",
                  "opacity": 1,
                  "padding": 0,
                  "width": "initial",
                }
              }
            />
          </span>
          <img
            alt="Evangelion: 3.0+1.0 Thrice Upon a Time"
            className="image"
            data-nimg="intrinsic"
            decoding="async"
            onError={[Function]}
            onLoad={[Function]}
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": undefined,
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
          <noscript>
            <img
              alt="Evangelion: 3.0+1.0 Thrice Upon a Time"
              className="image"
              data-nimg="intrinsic"
              decoding="async"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fimage.tmdb.org%2Ft%2Fp%2Fw300%2F1EAxNqdkVnp48a7NUuNBHGflowM.jpg&w=640&q=75"
              srcSet="/_next/image?url=https%3A%2F%2Fimage.tmdb.org%2Ft%2Fp%2Fw300%2F1EAxNqdkVnp48a7NUuNBHGflowM.jpg&w=384&q=75 1x, /_next/image?url=https%3A%2F%2Fimage.tmdb.org%2Ft%2Fp%2Fw300%2F1EAxNqdkVnp48a7NUuNBHGflowM.jpg&w=640&q=75 2x"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </noscript>
        </span>
      </div>
      <div
        className="detailsWrapper"
      >
        <ul
          className="cardItemsWrapper"
        >
          <li>
            <h3
              className="title"
              style={
                Object {
                  "color": "darkgray",
                }
              }
            >
              Title
            </h3>
            <p
              className="value"
              data-testid="title-text"
              style={
                Object {
                  "color": "black",
                }
              }
            >
              Evangelion: 3.0+1.0 Thrice Upon a Time
            </p>
          </li>
          <li>
            <h3
              className="title"
              style={
                Object {
                  "color": "darkgray",
                }
              }
            >
              Current Rating
            </h3>
            <p
              className="value"
              style={
                Object {
                  "color": "black",
                }
              }
            >
              8.7
            </p>
          </li>
          <li>
            <h3
              className="title"
              style={
                Object {
                  "color": "darkgray",
                }
              }
            >
              Year
            </h3>
            <p
              className="value"
              style={
                Object {
                  "color": "black",
                }
              }
            >
              2021
            </p>
          </li>
        </ul>
      </div>
    </div>
  </a>
</div>
`;

exports[`it renders a movie card 2`] = `
<div
  className="cardWrapper"
  style={
    Object {
      "backgroundColor": "darkblue",
    }
  }
>
  <div
    className="starWrapper"
  >
    <span
      className="star"
      onClick={[Function]}
      style={
        Object {
          "color": "yellow",
        }
      }
    >
      ★
    </span>
  </div>
  <a
    href="https://www.themoviedb.org/movie/283566"
  >
    <div
      className="card"
    >
      <div
        className="imageWrapper"
      >
        <span
          style={
            Object {
              "background": "none",
              "border": 0,
              "boxSizing": "border-box",
              "display": "inline-block",
              "height": "initial",
              "margin": 0,
              "maxWidth": "100%",
              "opacity": 1,
              "overflow": "hidden",
              "padding": 0,
              "position": "relative",
              "width": "initial",
            }
          }
        >
          <span
            style={
              Object {
                "background": "none",
                "border": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": "initial",
                "margin": 0,
                "maxWidth": "100%",
                "opacity": 1,
                "padding": 0,
                "width": "initial",
              }
            }
          >
            <img
              alt=""
              aria-hidden={true}
              src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27300%27%20height=%27169%27/%3e"
              style={
                Object {
                  "background": "none",
                  "border": 0,
                  "display": "block",
                  "height": "initial",
                  "margin": 0,
                  "maxWidth": "100%",
                  "opacity": 1,
                  "padding": 0,
                  "width": "initial",
                }
              }
            />
          </span>
          <img
            alt="Evangelion: 3.0+1.0 Thrice Upon a Time"
            className="image"
            data-nimg="intrinsic"
            decoding="async"
            onError={[Function]}
            onLoad={[Function]}
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": undefined,
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
          <noscript>
            <img
              alt="Evangelion: 3.0+1.0 Thrice Upon a Time"
              className="image"
              data-nimg="intrinsic"
              decoding="async"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fimage.tmdb.org%2Ft%2Fp%2Fw300%2F1EAxNqdkVnp48a7NUuNBHGflowM.jpg&w=640&q=75"
              srcSet="/_next/image?url=https%3A%2F%2Fimage.tmdb.org%2Ft%2Fp%2Fw300%2F1EAxNqdkVnp48a7NUuNBHGflowM.jpg&w=384&q=75 1x, /_next/image?url=https%3A%2F%2Fimage.tmdb.org%2Ft%2Fp%2Fw300%2F1EAxNqdkVnp48a7NUuNBHGflowM.jpg&w=640&q=75 2x"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </noscript>
        </span>
      </div>
      <div
        className="detailsWrapper"
      >
        <ul
          className="cardItemsWrapper"
        >
          <li>
            <h3
              className="title"
              style={
                Object {
                  "color": "lightray",
                }
              }
            >
              Title
            </h3>
            <p
              className="value"
              data-testid="title-text"
              style={
                Object {
                  "color": "aliceblue",
                }
              }
            >
              Evangelion: 3.0+1.0 Thrice Upon a Time
            </p>
          </li>
          <li>
            <h3
              className="title"
              style={
                Object {
                  "color": "lightray",
                }
              }
            >
              Current Rating
            </h3>
            <p
              className="value"
              style={
                Object {
                  "color": "aliceblue",
                }
              }
            >
              8.7
            </p>
          </li>
          <li>
            <h3
              className="title"
              style={
                Object {
                  "color": "lightray",
                }
              }
            >
              Year
            </h3>
            <p
              className="value"
              style={
                Object {
                  "color": "aliceblue",
                }
              }
            >
              2021
            </p>
          </li>
        </ul>
      </div>
    </div>
  </a>
</div>
`;
